CSS div widths added to correct flex alignment in transaction data

--- a/public/styles.css
+++ b/public/styles.css
@@ -50,6 +50,9 @@ li {
    display: flex;
    justify-content: space-between;
 }
+.tblock {
+   width: 200px;
+}
 
 header {
    padding-left: 90px;
